k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restauranty
  labels:
    project: restauranty
    managed-by: github-actions
