k8s/02-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: restauranty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: nhcpde147/restauranty-auth:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: restauranty
spec:
  selector:
    app: auth
  ports:
    - port: 3001
      targetPort: 3001
