k8s/03-discounts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts
  namespace: restauranty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
        - name: discounts
          image: nhcpde147/restauranty-discounts:latest
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: discounts
  namespace: restauranty
spec:
  selector:
    app: discounts
  ports:
    - port: 3002
      targetPort: 3002
