k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-ingress
  namespace: restauranty
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - restauranty.kelenva.com
      secretName: restauranty-tls-prod
  rules:
    - host: restauranty.kelenva.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3001
          - path: /api/discounts
            pathType: Prefix
            backend:
              service:
                name: discounts
                port:
                  number: 3002
          - path: /api/items
            pathType: Prefix
            backend:
              service:
                name: items
                port:
                  number: 3003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
